2004-03-29  Not Zed  <NotZed@Ximian.com>

	* providers/imap/camel-imap-store.c (get_folder_counts): use
	object_bag_peek instead of _get, since we dont want to clash/wait
	for reservations.  More #56045 related fixes.
	(get_folder_counts): revert the lookup/hashtable stuff for the
	folder, and use object_bag_peek.

	* camel-object.c (camel_object_bag_peek): new method to get an
	object bag entry without worrying about if its reserved or not.

	* camel-gpg-context.c (gpg_verify): get the content-type off of
	the multipart-signed, not its container.  This seems wrong
	... but might fix #56084.

	* providers/imap/camel-imap-store.c (get_folder_counts): remove
	locking here, we're locked whne we enter.
	(fill_fi): call refresh_info unlocked.  More for #56045.

2004-03-28  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap4/camel-imap-folder.[c,h]: New source files
	implementing the CamelFolder class for the new IMAP4
	implementation.

	* providers/imap4/camel-imap-summary.[c,h]: New source files
	implementing the CamelFolderSummary class for the new IMAP4
	implementation.

2004-03-26  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap/camel-imap-folder.c (imap_update_summary):
	Reverted imap.web.de fix.

2004-03-26  Not Zed  <NotZed@Ximian.com>

	* providers/local/camel-maildir-summary.c (flagbits[]): Added new
	maildir flags D for draft and commented P for forwarded.

	* providers/imap/camel-imap-store.c (get_folder_counts): Instead
	of looking up the folder in the object bag which will handle
	reservations and perhaps deadlock, just get the list of opened
	folders and use them if they're available.  Should fix #56045.

2004-03-25  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap4/camel-imap-engine.c
	(camel_imap_engine_parse_resp_code): No longer need to split ']'
	tokens from atom tokens due to a fixup in the ABNF grammar in
	rfc3501.

	* providers/imap4/camel-imap-specials.c: Changed ATOM_SPECIALS to
	include ']' (this is an addition in rfc3501).
